--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 </div>
                 <p class="tl-duration">June 2023 - present
                 </p>
-                <h5>Technical Support- <span>Toshani multi-brand trading Pvt. Ltd.</span></h5>
+                 <h5>Elevance Health-Verginia <span>Senior java developer</span></h5>
                 <p>* Developed scalable Angular apps with NgRx, integrated with Spring Boot microservices, and optimized PostgreSQL. <br>*Built CI/CD pipelines with Jenkins, deployed on AWS ECS/EKS, and implemented Kafka, Redis, and Elasticsearch for performance and security enhancements</p>
             </div>
             <div class="timeline-item">
@@ -297,7 +297,7 @@
                 </div>
                 <p class="tl-duration">July 2021 - Apr 2023
                 </p>
-                <h5>Pursuing Master's - <span>in Computer Application</span></h5>
+               <h5>State of Tennessee, Tennessee <span>Senior java Developer</span></h5>
                 <p>Built an e-commerce app with Angular 14, NgRx, and Spring Boot microservices. Secured with OAuth2 & JWT, integrated Kafka, Redis, and Elasticsearch. Automated CI/CD with Jenkins, deployed on AWS ECS/EKS with RDS, S3, and Lambda., <br> <p></p></p>
             </div>
             <div class="timeline-item">
@@ -305,7 +305,7 @@
                     <i class="fas fa-briefcase"></i>
                 </div>
                 <p class="tl-duration">Jan 2020 -  June 2021</p>
-                <h5>Technical Support- <span>Toshani multi-brand trading Pvt. Ltd.</span></h5>
+                  <h5>Burberry, Dallas, TX<span>Java Developer</span></h5>
                 <p>* Developed responsive SPAs with React.js (Redux, Hooks) and Angular, integrating RESTful APIs with Spring Boot microservices. Secured with OAuth2, JWT, and RBAC, implemented Kafka for event-driven processing, and optimized MongoDB/PostgreSQL <br>*  Deployed on AWS (EC2, S3, Lambda, RDS) with Docker, Kubernetes (EKS), and Terraform. Automated CI/CD with Jenkins & GitHub Actions, enhancing performance with Redis, Elasticsearch, and load balancing.</p>
             </div>
             <div class="timeline-item">
@@ -313,7 +313,7 @@
                     <i class="fas fa-briefcase"></i>
                 </div>
                 <p class="tl-duration">May 2018 – Dec 2019</p>
-                <h5>Bachloer's- <span>in Computer Application</span></h5>
+                   <h5>Aite Group LLC,Boston MA <span>Java Deverloper </span></h5>
                 <p>Developed Angular 6 UI components, integrated RESTful APIs, and built Spring Boot microservices with Kafka. Managed MySQL databases, optimized performance, and implemented AWS (EC2, S3, IAM). Built SOAP & REST services, following Agile-Scrum for iterative development.</p>
             </div>
             <div class="timeline-item">
@@ -322,7 +322,7 @@
                 </div>
                 <p class="tl-duration">May 2016 – Apr 2018
                 </p>
-                <h5>Bachloer's- <span>in Computer Application</span></h5>
+                  <h5>Citrix Systems, Hyderbad <span>Junior Java Developer </span> </h5>
                 <p>Followed Agile methodology, developed dynamic web pages with Struts2, Angular 8, and JSP, and implemented J2EE design patterns. Built and deployed Java APIs on Tomcat, managed MS SQL Server, and conducted unit testing with JUnit. Automated testing with Selenium, utilized Git for version control, and optimized builds with Maven.</p>
             </div>
         </div>
